# AutoSplat

./: README.md  pyproject.toml  requirements.txt
autosplat/core/: __init__.py  blender.py  camera.py  gaussian.py
autosplat/io/: __init__.py  camera.py  gaussians.py  main.py
autosplat/samples/: __init__.py  sphere.py
autosplat/utils/: __init__.py  render.py
autosplat/visualizer/: __init__.py  plot_cameras.py  render_rotation.py
data/: dataloader.py
scripts/: colmap_import.py  train_buddha_pytorch.py  train_temple.py
