[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosplat"
version = "0.1.0"
description = "Gaussian splatting renderer and supporting JAX, TensorFlow, PyTorch pipelines, requiring no manual gradients and supports CPU/GPU seamlessly."
authors = [
    { name="Abhas Kumar Sinha", email="abhaskumarsinha@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-image>=0.21",
    "imageio>=2.30",
    "tqdm>=4.65",
    "keras>=2.14"
]

[project.optional-dependencies]
torch = ["torch>=2.1"]

[project.urls]
Homepage = "https://github.com/abhaskumarsinha/AutoSplat"
