[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosplat"
version = "0.1.0"
description = "Gaussian splatting renderer with JAX, TensorFlow, and PyTorch support, requiring no manual gradients and supporting CPU/GPU seamlessly."
authors = [
    { name = "Abhas Kumar Sinha", email = "abhaskumarsinha@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-image>=0.21",
    "imageio>=2.30",
    "tqdm>=4.65",
    "keras>=2.14",
    # Visualization
    "plotly>=5.22"
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
dev = [
    "black>=24.4.0",
    "flake8>=7.0.0",
    "ipykernel>=6.29",
    "notebook>=7.1",
]

[project.urls]
Homepage = "https://github.com/abhaskumarsinha/AutoSplat"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
    "autosplat*",
    "autosplat.core*",
    "autosplat.io*",
    "autosplat.utils*",
    "autosplat.visualizer*"
]
